--- a/sass/page/reviews/detail/_footer.scss
+++ b/sass/page/reviews/detail/_footer.scss
@@ -8,10 +8,10 @@
 /*                footer              */
 /**************************************/
 
-// post
-.post {
+// reviews
+.reviews {
     // detail
     &.detail {}
     // detail end
 }
-// post end
+// reviews end
