--- a/sass/page/reviews/_detail.scss
+++ b/sass/page/reviews/_detail.scss
@@ -1,66 +1,27 @@
+@charset "utf-8";
+
 //sass style
 //-----------------------------------
-// _detail.scss
+// detail.scss
 
 
+
+// _utils.scss
+// @import "utils/_utils";
 
 /**************************************/
-/*               detail               */
+/*              detail                */
 /**************************************/
 
-.reviews {
-    // detail
-    &.detail {
-        padding-top: 0;
-        // header
-        > .header {
-            @include remCalc("margin-bottom", 8);
 
-            > .main {
-                display: flex;
-                align-items: center;
-                @include remCalc("margin", 0 -10);
-                @include remCalc("padding", 10);
-                @include remCalc("border-bottom", (1 solid #dddddd));
+// _layout.scss
+@import "detail/_layout";
 
-                // user_img
-                > .user_img {
-                    @include remCalc("width", 60);
-                    @include remCalc("height", 60);
-                    @include remCalc("margin-right", 10);
-                }
-                // user_img end
+// _header.scss
+@import "detail/_header";
 
-                // content
-                > .content {
-                    flex: 1;
+// _content.scss
+@import "detail/_content";
 
-                    // grade
-                    > .grade {
-                        text-transform: capitalize;
-                    }
-                    // grade end
-
-                    // title
-                    > .title {
-                        @include font-size(14);
-                        font-weight: 500;
-                        line-height: 1.43;
-                    }
-                    // title end
-                }
-                // content end
-            }
-        }
-        // header end
-
-        // content
-        > .content {}
-        // content end
-
-        // footer
-        > .footer {}
-        // footer end
-    }
-    // detail end
-}
+// _footer.scss
+@import "detail/_footer";
