--- a/sass/lib/_module.scss
+++ b/sass/lib/_module.scss
@@ -51,8 +51,8 @@
 // _img.scss
 @import "module/_img";
 
-// _icon.scss
-@import "module/_icon";
+// _icons.scss
+@import "module/_icons";
 
 // _btn.scss
 @import "module/_btn";
