--- a/sass/lib/module/list/shop/_layout.scss
+++ b/sass/lib/module/list/shop/_layout.scss
@@ -13,7 +13,7 @@
     > li {
         @include remCalc("margin", 0 -10);
         @include remCalc("border-top", (1 solid rgba($base-border-color, .5)));
-        background-color: #ffffff;
+        // background-color: #ffffff;
 
         &:first-child {
             padding-top: 0;
