--- a/sass/page/reviews/detail/_footer.scss
+++ b/sass/page/reviews/detail/_footer.scss
@@ -11,7 +11,95 @@
 // reviews
 .reviews {
     // detail
-    &.detail {}
+    &.detail {
+        // footer
+        > .footer {
+            @include remCalc("margin", 30 -10 20);
+
+            // title
+            > .title {
+                color: $base-text-color;
+                line-height: 1.43;
+                text-align: center;
+            }
+            // title end
+
+            // content
+            > .content {
+                @include remCalc("margin-top", 10);
+                @include remCalc("padding", 15 10);
+                background-color: #f4f4f4;
+                display: flex;
+                align-items: center;
+
+                // ui_shoplist
+                > .ui_shoplist {
+                    flex: 1;
+                    // li
+                    > li {
+                        margin: 0;
+
+                        > a {
+                            padding: 0;
+
+                            // img
+                            > .img {
+                                @include remCalc("width", 40);
+                            }
+                            // img end
+                            // content
+                            > .content {
+                                // comments
+                                > .comments {
+                                    display: none;
+                                }
+                                // comments end
+                                // info
+                                > .info {
+                                    display: none;
+                                }
+                                // info end
+                                // region
+                                > .region {
+                                    // position
+                                    > .position {
+                                        display: none;
+                                    }
+                                    // position end
+                                }
+                                // region end
+                            }
+                            // content end
+                        }
+                    }
+                    // li end
+                }
+                // ui_shoplist end
+
+                // tools
+                > .tools {
+                    @include remCalc("margin-left", 10);
+                    // btn
+                    > .btn {
+                        @include inline-block;
+                        border-radius: 50%;
+                        background-color: #ffffff;
+                        color: #000000;
+                        @include remCalc("padding", 8);
+
+                        > .ui_icon {
+                            @include remCalc("width", 24);
+                            @include remCalc("height", 24);
+                        }
+                    }
+                    // btn end
+                }
+                // tools end
+            }
+            // content end
+        }
+        // footer end
+    }
     // detail end
 }
 // reviews end
