--- a/sass/page/site/_index.scss
+++ b/sass/page/site/_index.scss
@@ -19,8 +19,27 @@
             > .content {
                 // ui_postlist
                 > .ui_postlist {
-                    display: flex;
                     @extend %scroll-x-layout;
+
+                    > li {
+                        @include inline-block(top);
+
+                        > a {
+                            // img
+                            > .img {
+                                // position: relative;
+                                @include remCalc("height", 90);
+
+                                // > img {
+                                //     position: absolute;
+                                //     width: 100%;
+                                //     height: 100%;
+                                //     @include position-center;
+                                // }
+                            }
+                            // img end
+                        }
+                    }
                 }
                 // ui_postlist end
             }
