--- a/sass/lib/_module.scss
+++ b/sass/lib/_module.scss
@@ -32,7 +32,7 @@
 @import "module/_blocks";
 
 // _notfind.scss
-// @import "module/_notfind";
+@import "module/_notfind";
 
 // _dialog.scss
 @import "module/_dialog";
