--- a/sass/lib/module/_icons.scss
+++ b/sass/lib/module/_icons.scss
@@ -38,7 +38,7 @@
             stroke: currentcolor;
             &.cur {
                 fill: $base-color;
-                stroke: none;
+                stroke: $base-color;
             }
         }
     }
