--- a/sass/page/_profile.scss
+++ b/sass/page/_profile.scss
@@ -17,7 +17,7 @@
 @import "profile/_layout";
 
 // _reward.scss
-@import "profile/_reward";
+// @import "profile/_reward";
 
 // _detail.scss
 @import "profile/_detail";
