--- a/sass/profile.scss
+++ b/sass/profile.scss
@@ -2,14 +2,14 @@
 
 //sass style
 //-----------------------------------
-// reward.scss
+// profile.scss
 
 
 // _utils.scss
 @import "utils/_utils";
 
 /**************************************/
-/*               reward               */
+/*              profile               */
 /**************************************/
 
 // _layout.scss
