--- a/sass/utils/_config.scss
+++ b/sass/utils/_config.scss
@@ -36,7 +36,7 @@ $base-text-color: #333333;
 $base-text-color2: #999999;
 
 // 連結顏色
-$base-link-color: $base-color;
+$base-link-color: #4492d8;
 
 // 連結hover顏色
 // $base-link-hover-color: $base-color;
@@ -63,7 +63,7 @@ $base-btn-colors: (
 );
 
 // border
-$base-border-color: $base-text-color2;
+$base-border-color: rgba(0, 0, 0, .24);
 
 
 /**************************************/
