--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -30,12 +30,12 @@
 /**************************************/
 
 // _post.scss
-@import "placeholders/_post";
+// @import "placeholders/_post";
 
 /**************************************/
 /*                my                  */
 /**************************************/
 
 // _my.scss
-@import "placeholders/_my";
+// @import "placeholders/_my";
 
