--- a/sass/lib/module/list/comment/content/_con.scss
+++ b/sass/lib/module/list/comment/content/_con.scss
@@ -24,19 +24,7 @@
 
     // imgs
     > .imgs {
-        @include remCalc("margin-top", 10);
-        display: flex;
-        flex-wrap: wrap;
-        // img
-        > .img {
-            flex: 0 0 floor((100 - ((5 / $base-font-size) * 3)) / 3) * 1%;
-            @include remCalc("margin", 0 5 5 0);
-
-            &:nth-child(3n) {
-                margin-right: 0;
-            }
-        }
-        // img end
+        @extend %post-imgs;
     }
     // imgs end
 }
