--- a/sass/lib/module/_icons.scss
+++ b/sass/lib/module/_icons.scss
@@ -44,10 +44,10 @@
     }
 
     // _rank.scss
-    @import "icons/_rank";
+    // @import "icons/_rank";
 
     // // _png.scss
-    // @import "icons/_png";
+    @import "icons/_png";
 
     // // _svg.scss
     // @import "icons/_svg";
