--- a/sass/page/site/_index.scss
+++ b/sass/page/site/_index.scss
@@ -28,7 +28,7 @@
                             // img
                             > .img {
                                 // position: relative;
-                                @include remCalc("height", 90);
+                                // @include remCalc("height", 90);
 
                                 // > img {
                                 //     position: absolute;
