--- a/sass/lib/module/list/shop/_layout.scss
+++ b/sass/lib/module/list/shop/_layout.scss
@@ -12,13 +12,8 @@
     // li
     > li {
         @include remCalc("margin", 0 -10);
-        @include remCalc("border-top", (0.5 solid $base-border-color));
+        @include remCalc("border-bottom", (0.5 solid $base-border-color));
         // background-color: #ffffff;
-
-        &:first-child {
-            padding-top: 0;
-            border-top: none;
-        }
 
         // max-screen
         @include max-screen($base-max-screen){}
@@ -30,10 +25,16 @@
             @include remCalc("padding", 15 10);
         }
 
-
         &:first-child {
             > a {
                 padding-top: 0;
+            }
+        }
+
+        &:last-child {
+            border-bottom: none;
+            > a {
+                padding-bottom: 0;
             }
         }
 
