--- a/sass/lib/module/list/voucher/_layout.scss
+++ b/sass/lib/module/list/voucher/_layout.scss
@@ -12,13 +12,8 @@
     // li
     > li {
         @include remCalc("margin", 0 -10);
-        @include remCalc("border-top", (0.5 solid rgba(0, 0, 0, .24)));
+        @include remCalc("border-bottom", (0.5 solid rgba(0, 0, 0, .24)));
         // background-color: #ffffff;
-
-        &:first-child {
-            padding-top: 0;
-            border-top: none;
-        }
 
         // max-screen
         @include max-screen($base-max-screen){}
@@ -34,6 +29,13 @@
         &:first-child {
             > a {
                 padding-top: 0;
+            }
+        }
+
+        &:last-child {
+            border-bottom: none;
+            > a {
+                padding-bottom: 0;
             }
         }
     }
