--- a/sass/page/maps/_mapsinfo.scss
+++ b/sass/page/maps/_mapsinfo.scss
@@ -33,6 +33,8 @@
             // @include remCalc("right", 20);
             // @include remCalc("padding", 10);
             background-color: #ffffff;
+            color: $base-text-color;
+            font-weight: normal;
 
             // block
             > .block {
@@ -49,6 +51,7 @@
                     > .title {
                         font-weight: 500;
                         line-height: 1.71;
+                        color: $base-heading-color;
                     }
                     // title end
 
@@ -91,6 +94,11 @@
                                 color: $base-text-color2;
                             }
                             // cate end
+                            // price
+                            > .price {
+                                color: $base-heading-color;
+                            }
+                            // price end
                         }
                         // con end
                     }
