--- a/sass/utils/_config.scss
+++ b/sass/utils/_config.scss
@@ -131,7 +131,7 @@ $base-forms-col-title-margin-mobile: 16;
 /**************************************/
 
 // images url
-$bast-images-path: '/images/';
+$bast-images-path: '../images/';
 
 // icon svg
 $base-svg-icon-size: (width: 20, height: 20);
