--- a/sass/utils/placeholders/module/_layout.scss
+++ b/sass/utils/placeholders/module/_layout.scss
@@ -21,29 +21,29 @@
 
 
 // review-stars
-%review-stars {
-    position: relative;
-    // @include remCalc("width", 12 * 6);
-    // @include remCalc("height", 12);
-    width: 72px;
-    height: 12px;
-    background-image: url($bast-images-path + 'review/bg_review_star.png');
-    background-repeat: repeat-x;
-    background-position: 0 0;
-    background-size: contain;
+// %review-stars {
+//     position: relative;
+//     // @include remCalc("width", 12 * 6);
+//     // @include remCalc("height", 12);
+//     width: 72px;
+//     height: 12px;
+//     background-image: url($bast-images-path + 'review/bg_review_star.png');
+//     background-repeat: repeat-x;
+//     background-position: 0 0;
+//     background-size: contain;
 
-    > .star {
-        position: absolute;
-        top: 0;
-        left: 0;
-        // @include remCalc("height", 12);
-        height: 12px;
-        background-image: url($bast-images-path + 'review/bg_review_star_full.png');
-        background-repeat: repeat-x;
-        background-position: 0 0;
-        background-size: contain;
-    }
-}
+//     > .star {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         // @include remCalc("height", 12);
+//         height: 12px;
+//         background-image: url($bast-images-path + 'review/bg_review_star_full.png');
+//         background-repeat: repeat-x;
+//         background-position: 0 0;
+//         background-size: contain;
+//     }
+// }
 // review-stars end
 
 
