--- a/sass/page/_maps.scss
+++ b/sass/page/_maps.scss
@@ -10,7 +10,7 @@
 // @import "utils/_utils";
 
 /**************************************/
-/*                  maps               */
+/*                  maps              */
 /**************************************/
 
 // _layout.scss
@@ -21,3 +21,6 @@
 
 // _recommend.scss
 @import "maps/_recommend";
+
+// _checkin.scss
+@import "maps/_checkin";
