--- a/sass/layout/header/_layout.scss
+++ b/sass/layout/header/_layout.scss
@@ -17,6 +17,7 @@
 
     // container
     > .container {
+        position: relative;
         // display: flex;
         // align-items: center;
         // flex-wrap: wrap;
