--- a/sass/page/restaurant/detail/_baseinfo.scss
+++ b/sass/page/restaurant/detail/_baseinfo.scss
@@ -230,12 +230,14 @@
                                     @include remCalc("margin-left", 10);
                                     @include remCalc("width", 90);
                                     @include remCalc("height", 60);
+                                    overflow: hidden;
 
                                     // googlemaps
                                     > .googlemaps {
-                                        position: relative;
-                                        width: 100%;
-                                        height: 100%;
+                                        position: absolute;
+                                        @include position-center;
+                                        @include remCalc("width", 180);
+                                        @include remCalc("height", 120);
                                         overflow: hidden;
                                     }
                                     // googlemaps end
