--- a/sass/lib/module/_dialog.scss
+++ b/sass/lib/module/_dialog.scss
@@ -22,5 +22,8 @@
 // _getappsdialog.scss
 @import "dialog/getappsdialog";
 
-// _viewpic.scss
-@import "dialog/viewpic";
+// _photosbox.scss
+@import "dialog/photosbox";
+
+// _sharebox.scss
+@import "dialog/sharebox";
