--- a/sass/layout/header/_layout.scss
+++ b/sass/layout/header/_layout.scss
@@ -21,6 +21,15 @@
         // display: flex;
         // align-items: center;
         // flex-wrap: wrap;
+
+        // scrollfix
+        > .scrollfix {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+        }
+        // scrollfix end
     }
     // container end
 }
