--- a/sass/lib/module/filter/content/_nav.scss
+++ b/sass/lib/module/filter/content/_nav.scss
@@ -91,6 +91,10 @@
                     }
                     // title end
                 }
+
+                &+.second {
+                    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.24);
+                }
             }
             // selected end
 
