--- a/sass/lib/module/blocks/shop/_content.scss
+++ b/sass/lib/module/blocks/shop/_content.scss
@@ -35,6 +35,7 @@
                     @include remCalc("padding", 0 40 0 0);
                     // img
                     > .img {
+                        @include remCalc("height", 70);
                         @include remCalc("width", 70);
                     }
                     // img end
