--- a/sass/lib/module/filter/content/_nav.scss
+++ b/sass/lib/module/filter/content/_nav.scss
@@ -27,11 +27,13 @@
             overflow-y: auto;
 
             > li {
+                position: relative;
                 @include remCalc("padding", 10 16);
 
                 // title
                 > .title {
                     display: flex;
+                    align-items: center;
                     @include font-size(14);
                     @include remCalc("height", 20);
                     @include remCalc("line-height", 20);
@@ -44,15 +46,50 @@
                         @include remCalc("width", 20);
                         @include remCalc("height", 20);
                     }
+
+                    > .icon_check {
+                        @include opacity(0);
+                    }
                     // ui_icon end
+
+                    > .txt {
+                        flex: 1;
+                    }
                 }
                 // title end
 
+                &.cur,
                 &.active {
                     background-color: #ffffff;
                     // title
                     > .title {
                         color: $base-color;
+                    }
+                    // title end
+                }
+
+                &.active {
+                    // title
+                    > .title {
+
+                        > .icon_check {
+                            @include opacity(100);
+                        }
+                    }
+                    // title end
+                }
+
+                &.cur {
+                    // title
+                    > .title {
+                        &:after {
+                            position: absolute;
+                            @include position-center(top);
+                            @include remCalc("right", 10);
+                            @include remCalc("margin-top", -2);
+                            content: "";
+                            @include triangles("arrow", "left", $base-color, 6, 2);
+                        }
                     }
                     // title end
                 }
@@ -63,7 +100,9 @@
             // first end
 
             // second
-            &.second {}
+            &.second {
+                display: none;
+            }
             // second end
 
             // third
@@ -72,34 +111,9 @@
             }
             // third end
 
-            // selected
-            &.selected {
-                @include remCalc("max-width", 20+16+16);
-                background-color: #f4f4f4;
-
-                > li {
-                    // title
-                    > .title {
-                        // ui_icon
-                        > .ui_icon {
-                            margin-right: 0;
-                        }
-                        // ui_icon end
-                        > span {
-                            display: none;
-                        }
-                    }
-                    // title end
-                }
-
-                &+.second {
-                    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.24);
-                }
-            }
-            // selected end
-
             // cur
             &.cur {
+                display: block;
                 @include remCalc("max-width", 140);
                 background-color: #f4f4f4;
             }
@@ -111,10 +125,41 @@
                 background-color: #ffffff;
 
                 > li {
-                    @include remCalc("padding-left", 35);
+                    // @include remCalc("padding-left", 35);
                 }
             }
             // active end
+
+            // selected
+            &.selected {
+                display: block;
+                @include remCalc("max-width", 20+16+16);
+                background-color: #f4f4f4;
+
+                > li {
+                    // title
+                    > .title {
+                        // ui_icon
+                        > .ui_icon {
+                            margin-right: 0;
+                        }
+                        // ui_icon end
+                        > .txt {
+                            display: none;
+                        }
+
+                        &:after {
+                            display: none;
+                        }
+                    }
+                    // title end
+                }
+
+                &+.second {
+                    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.24);
+                }
+            }
+            // selected end
         }
         // list end
     }
