--- a/sass/page/profile/detail/list/_postlist.scss
+++ b/sass/page/profile/detail/list/_postlist.scss
@@ -105,6 +105,7 @@
                                 // img
                                 > .img {
                                     width: 100%;
+                                    height: auto;
                                     margin-right: 0;
                                     @include remCalc("border-radius", 3 3 0 0);
                                 }
