--- a/sass/page/restaurant/detail/_recommend.scss
+++ b/sass/page/restaurant/detail/_recommend.scss
@@ -36,6 +36,7 @@
                             // img
                             > .img {
                                 width: 100%;
+                                height: auto;
                                 margin-right: 0;
                             }
                             // img end
